# Agora

./: .gitignore  CMakeLists.txt  LICENSE  README.md  client.py  constants.py  main.cpp  main.py  node_list.py  properties.yaml  requirements.txt  server.py  setup.py
Discovery/: Discovery.cpp  Discovery.h
Net/: Message.h
Node/: Node.cpp  Node.h
Server/: Server.cpp  Server.h
Server/HeartBeat/: HeartBeat.h
Utility/: Configuration.h  Message.cpp  Message.h  UuidGeneration.cpp  UuidGeneration.h
auction/: auction.py  auction_room.py  client_auction_manager.py  server_auction_manager.py
bak/: CMakeLists.txt  main.cpp
bak/Discovery/: Discovery.cpp  Discovery.h
bak/Node/: Node.cpp
bak/Server/: Server.cpp
bak/Server/HeartBeat/: HeartBeat.cpp
bak/Utility/: Configuration.cpp
broadcast/: broadcast.py
discovery/: discovery_handler.py
docs/: arch.md
election/: election_manager.py
heartbeat/: hearbeat.py  heartbeat.py
log/: log_entries.py
manager/: client_manager.py
message/: message.py  message_handler.py  message_types.py  outgoing_message.py
messages/: client_messages_manager.py  server_messages_manager.py
replication/: __init__.py  state_replication_manager.py
snapshots/: snapshots_manager.py
udp/: udp.py
ui/: ui.py
unicast/: unicast.py
util/: copy_utils.py  network_util.py  request_response_handler.py  uuid_util.py
utils/: common.py  pending_requests.py
